--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "lenis": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
