--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed:categories": "node scripts/seed-categories.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -22,8 +23,12 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/client": "^7.14.1",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.22.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
@@ -31,8 +36,11 @@
     "lucide-react": "^0.546.0",
     "motion": "^12.26.1",
     "next": "^16.0.7",
+    "next-sanity": "^11.6.12",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sanity": "^4.22.0",
+    "styled-components": "^6.3.9",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
